# smol-llama2

./: .gitignore  README.md  pyproject.toml  requirements-viz.txt  requirements.txt
docs/: nano-llama-math.md
llama_vc/: __init__.py  config.py  dataset.py  device.py  generate.py  model.py  tokenizer.py  train.py  utils.py
notebooks/: llama_vc_colab.ipynb
scripts/: eval_model.py  generate_text.py  run_viz.py  train_model.py  train_tokenizer.py
tests/: test_generate.py  test_model.py  test_rope.py  test_tokenizer.py
viz/: __init__.py  analysis.py  app.py  captum_analysis.py  hooks.py  metrics.py
viz/static/: index.html
viz/static/css/: style.css
viz/static/js/: activations.js  app.js  attention.js  attribution.js  captum.js  circuits.js  dashboard.js  embeddings.js
