[project]
name = "llama-vc"
version = "0.1.0"
description = "Educational LLaMA-style LLM from scratch in pure PyTorch"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "sentencepiece>=0.2.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
